@@ -2,6 +2,7 @@ Changes
 lib/Array/Iterator.pm
 lib/Array/Iterator/BiDirectional.pm
 lib/Array/Iterator/Circular.pm
+lib/Array/Iterator/LegacyBiDirectional.pm
 lib/Array/Iterator/Reusable.pm
 LICENSE
 Makefile.PL
@@ -17,6 +18,7 @@ t/eof.t
 t/eol.t
 t/exceptions.t
 t/iterator.t
+t/legacy_bidirectional.t
 t/pod-coverage.t
 t/reusable.t
 t/rt126034.t
